--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 <meta name="description" content="">
 <meta name="author" content="">
 <link rel="icon" href="/favicon.ico">
+<link href="https://fonts.googleapis.com/css2?family=Dosis:wght@500&display=swap" rel="stylesheet">
 
 
 <meta itemprop="name" content="metacrobe">
@@ -52,11 +53,11 @@
 
 
 
-<link rel="stylesheet" href="/css/vendor.min.938ca923e1a1b919e23be95735a0b63371e53182e918de71da1a33ed0692abd1.css" integrity="sha256-k4ypI&#43;GhuRniO&#43;lXNaC2M3HlMYLpGN5x2hoz7QaSq9E=">    
+<link rel="stylesheet" href="/css/vendor.min.2a88da4f9fee13713bc61cdde3fb65d4c6602b7f75a703606aff836c0b316114.css" integrity="sha256-KojaT5/uE3E7xhzd4/tl1MZgK391pwNgav&#43;DbAsxYRQ=">
 <body class="text-center">
         <main role="main" class="container">
 
-<h1 class="welcomeText">Jarrod J Scott, PhD Microbiology</h1>
+<h1 class="welcomeText">Jarrod J Scott, PhD</h1>
 
 
     
@@ -84,7 +85,7 @@
                 <div id="iconListEntry" class="card">
                     <div class="card-body cursorPointer" onclick="location.href = 'https:\/\/metacrobe.github.io\/ccmi\/index.html'">
                         <p class="card-text"><a href="https://metacrobe.github.io/ccmi/index.html" target="_self" class="iconLink"><i class="fa-5x fas fa-chalkboard-teacher"></i></a></p>
-                        <p class="card-text"><a href="https://metacrobe.github.io/ccmi/index.html" target="_self" class="iconLink"><b>Outreach Portfolio</b> <br/> A collection of websites I have created for public lectures, courses, & publications.</a></p>
+                        <p class="card-text"><a href="https://metacrobe.github.io/ccmi/index.html" target="_self" class="iconLink"><b>Outreach Portfolio</b> <br/> A collection of websites I created for my public lectures, courses, & publications.</a></p>
                     </div>
                 </div>
             
@@ -105,7 +106,7 @@
         </main>
 
 
-<script src="/js/vendor.min.4aa2f7ccf1dbe79b8dd88be27972ce91f926bb35f30bec1fdfcc3c1aece58063.js"></script>
+<script src="/js/vendor.min.7232115811badb7575f27fd8245a9afdb2a511aee521fc2d43368153554fe685.js"></script>
 
 
 </body>
